--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>%VITE_APP_TITLE%</title>
 </head>
 
-<body>
+<body ontouchstart="">
   <div id="app"></div>
   <script type="module" src="/src/main.ts"></script>
 </body>
